force-app/main/default/objects/Wheel__c/Wheel__c.object-meta.xml
<CustomObject>
    <label>Wheel</label>
    <nameField>
        <displayFormat>WID{0000}</displayFormat>
        <label>Wheel Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wheels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>