force-app/main/default/objects/Wheel__c/fields/AuteczkoID__c.field-meta.xml
<CustomField>
    <fullName>AuteczkoID__c</fullName>
    <label>AuteczkoID</label>
    <referenceTo>Auteczko__c</referenceTo>
    <relationshipLabel>Wheels</relationshipLabel>
    <relationshipName>Wheels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>