force-app/main/default/objects/Wheel__c/fields/Auteczkos__c.field-meta.xml
<CustomField>
    <fullName>Auteczkos__c</fullName>
    <label>Auteczko</label>
    <referenceTo>Auteczko__c</referenceTo>
    <relationshipLabel>Wheels</relationshipLabel>
    <relationshipName>Wheels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>