force-app/main/default/objects/Wheel__c/fields/Position_FB_del__c.field-meta.xml
<CustomField>
    <fullName>Position_FB_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Position Front/Back</label>
    <type>Checkbox</type>
</CustomField>