force-app/main/default/objects/Wheel__c/fields/Position_Right_Left__c.field-meta.xml
<CustomField>
    <fullName>Position_Right_Left__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Position Right/Left</label>
    <type>Checkbox</type>
</CustomField>