force-app/main/default/objects/Wheel__c/fields/Position_RL_del__c.field-meta.xml
<CustomField>
    <fullName>Position_RL_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Position RIGHT/LEFT</label>
    <type>Checkbox</type>
</CustomField>